# CodeSentinel

./: .env.example  .gitignore  README.md  check_readiness.py  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  test_out.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: feedback.py  repos.py  webhooks.py
backend/app/core/: config.py  database.py  telemetry.py
backend/app/models/: __init__.py  feedback.py  finding.py  pull_request.py  repository.py
backend/app/services/: cache_service.py  dependency_service.py  diff_service.py  github_poster.py  github_service.py  inference_service.py  notification_service.py  policy_service.py  prompt_builder.py  rag_service.py  remediation_service.py  security_service.py  visual_service.py
backend/app/tasks/: celery_app.py  review_tasks.py
backend/eval/: ground_truth.jsonl  run_eval.py
backend/tests/: conftest.py  test_diff_service.py  test_github_poster.py  test_inference_service.py  test_models.py  test_rag_service.py  test_webhooks.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/test/: page.tsx
frontend/components/: FPRGauge.tsx  FindingsChart.tsx  RepoList.tsx  SeverityDonut.tsx  StatCard.tsx
frontend/lib/: api.ts
infra/: docker-compose.dev.yml  docker-compose.prod.yml
scripts/: seed_qdrant.py
